--- a/style.css
+++ b/style.css
@@ -1,4 +1,602 @@
-div{
-    background-color: tomato;
-    height: 150px;
+*{
+    margin: 0%;
+    padding: 0%;
+}
+
+/*.slider{
+    background-color: #4b4b4b;
+    color: white;
+    position: absolute;
+}
+
+.sliderone{
+    margin-left: 40px;
+    list-style: none;
+    display: flex;  
+}
+
+.sliderone li{
+    margin-left: 60px;
+}*/
+
+.display{
+    height: 600px;
+}
+
+.header{
+    height: 130px;
+    width: 100%;
+    background-color: bisque;
+}
+
+.khushi{
+    width: 170px;
+    height: 60px;
+    margin-left: 150px;
+    margin-top: 28px;
+}
+
+#srch{
+    width: 150px;
+    height: 51px;
+    padding: 10px 15px;
+    border: 2px solid rgba(76, 202, 78, 0.4);
+    border-radius: 5px 0px 0px 5px;
+    border-right-color: aliceblue;
+    outline: none;
+}
+
+.srch{
+    width: 500px;
+    height: 45px;
+    padding: 1px 15px;
+    margin-left: -4px;
+    border-left: none;
+    border: 2px solid rgba(76, 202, 78, 0.4);
+    border-left-color: aliceblue;
+    border-radius: 0px 5px 5px 0px;
+    outline: none;
+}
+
+#srchicn{
+    margin-left: -35px;
+    opacity: 0.4;
+}
+
+.srchbar{
+    align-items: center;
+    margin-left: 23%;
+    margin-top: -55px;
+    width: 700px;
+}
+
+.locka{
+    width: 170px;
+    margin-left: 68%;
+    margin-top: -48px;
+    box-shadow: 0px 2px 5px gainsboro;
+}
+
+#locka{
+    width: 170px;
+    height: 40px;
+    color: rgba(76, 202, 78, 0.8);
+    border-color: aliceblue;
+    border-radius: 5px;
+    padding-left: 30px;
+    outline: none;
+}
+
+#lock{
+    position:absolute;
+    margin-left: -160px;
+    margin-top: 13px;
+    opacity: 0.6;
+}
+
+.nv{
+    display: flex;
+    width: 300px;
+    margin-left: 78%;
+    margin-top: -25px;
+}
+
+.nv ul a{
+    text-decoration: none;
+    color: black;
+}
+
+.nv ul{
+    display: flex;
+    justify-content: center;
+}
+.nv ul li{
+    margin-left: 58px;
+    list-style: none;
+    font-size: 18px;
+    opacity: 0.7;
+}
+
+#heart{
+    position: absolute;
+    margin-left: 35px;
+}
+
+
+#cart{
+    position: absolute;
+    margin-left: 150px;
+}
+
+#account{
+    position: absolute;
+    margin-left: 243px;
+}
+
+.hre{
+    margin-top: 54px;
+    opacity: 0.7;
+}
+
+.downhead{
+    background-color: rgb(247, 203, 147);
+    width: 100%;
+    height: 70px;
+}
+
+.ponnobtn{
+    width: 190px;
+    margin-left: 135px;
+}
+
+#ponnobtn{
+    background-color: #3BB77E;
+    color: white;
+    width: 195px;
+    height: 45px;
+    border-radius: 7px;
+    margin-top: 12px;
+    padding-left: 50px;
+    font-size: 16px;
+    outline: none;
+}
+
+#boxic{
+    position: absolute;
+    margin-top: 26px;
+    margin-left: 18px;
+    color: aliceblue;
+}
+
+.navnav{
+    width: 700px;
+    position: absolute;
+    margin-left: 400px;
+    margin-top: -30px;
+}
+
+#navnav{
+    list-style: none;
+    display: flex;
+    margin-left: -38px;
+}
+
+#navnav a{
+    text-decoration: none;
+    color: black;
+    margin-left: 60px;
+    font-size: 17px;
+    font-weight: bold;
+}
+
+#navnav a:hover{
+    color: #40739e;
+}
+
+#homeic{
+    position: absolute;
+}
+
+
+.contact{
+    background-color: #25D366;
+    width: 140px;
+    padding: 10px;
+    border-radius: 5px;
+    margin-left: 87%;
+    margin-top: -40px;
+    position: absolute;
+}
+
+.contact a{
+    text-decoration: none;
+    color: white;
+}
+
+#headphn{
+    position: absolute;
+    margin-left: -49px;
+    margin-top: -5px;
+    font-size: 30px;
+    opacity: 0.6;
+}
+
+.bdy{
+    background-image: url("img/bg.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 650px;
+    margin-top: -400px;
+    
+}
+
+.freedl{
+    height: 540px;
+    width: 1000px;
+    border-radius: 30px;
+    margin-top: 55px;
+    margin-left: 160px;
+}
+
+.juice{
+    height: 540px;
+    margin-left: 30px;
+    border-radius: 30px;
+}
+
+#shpnw{
+    width: 110px;
+    height: 33px;
+    position: absolute;
+    border-radius: 5px;
+    outline: none;
+    border: none;
+    background-color: #25D366;
+    color: aliceblue;
+    margin-top: 302px;
+    margin-left: -470px;
+}
+
+#shpnw:hover{
+    background-color: orange;
+    transition: 1s ease-in-out;
+}
+
+.product-tabs{
+    background-color: none;
+    width: 100%;
+    height: 700px;
+    display: flex;
+}
+
+#sidelist{
+    background-color: none;
+    width: 400px;
+    height: 400px;
+    margin-left: 180px;
+}
+
+.lineone{
+    width: 320px;
+    margin-left: 80px;
+    margin-top: 15px;
+}
+
+#blueline{
+    width: 79px;
+    border-top: 2px solid #25D366;
+    position: absolute;
+    margin-top: 14px;
+}
+
+.button{
+    height: 400px;
+    margin-top: 20px;
+}
+
+.button ul li{
+    list-style: none;
+    margin-top: 20px;
+    padding-top: 5px;
+    border: none;
+    padding: 10px;
+    padding-left: 70px;
+    background-color: white;
+    box-shadow: 0px 2px 5px gainsboro;
+}
+
+.button ul a{
+    text-decoration: none;
+    color: black;
+}
+
+.button ul li:hover{
+    color: #25D366;
+    border: 1px solid #25D366;
+    border-color: #25D366;
+    
+}
+
+.allproducts{
+    background-color: none;
+    width: 1150px;
+    float:left;
+    margin-left: 25px;
+}
+
+.linetwo{
+    width: 1070px;
+    margin-left: 80px;
+    margin-top: 15px;
+}
+
+.navone{
+  margin-top: 18px;
+  margin-left: -20px;  
+}
+
+.navone button{
+    margin-left: 20px;
+    background-color: white;
+    border: none;
+    font-size: 15px;
+}
+
+.allcl{
+    color: #25D366;
+}
+
+.navone button:hover{
+    color: #25D366;
+    transition: 0.6s ease;
+}
+
+.allcard{
+    display: flex;
+    margin-left: -20px;
+}
+
+#cardone:hover{
+    transition: 0.3s ease-in;
+    box-shadow: -1px 10px 10px #7ed6df;
+}
+
+.cardone{
+    width: 270px;
+    height: 450px;
+    background-color: none;
+    border-radius: 17px;
+    margin-top: 60px;
+    box-shadow: 5px 5px 15px #95afc0;
+    margin-left: 20px;
+    text-align: center;
+}
+
+#cardone img{
+
+    width: 100%;
+    height: 350px;
+    border-radius: 17px 17px 0px 0px;
+}
+
+#pdttext{
+    margin-top: 30px;
+}
+
+.secone{
+    background-color: #25D366;
+    width: 1600px;
+    height: 400px;
+    position: absolute;
+    margin-top: 650px;
+    margin-left: 150px;
+    border-radius: 25px;
+    background-image: url("img/sl1.jpg");
+}
+ .secone h1{
+    font-size: 40px;
+    margin: 80px;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color: #4b4b4b;
+ }
+
+.pone{
+    margin-left: 80px;
+    margin-top: -50px;
+    font-size: 19px;
+    color: #1289A7;
+}
+
+.khlink{
+    text-decoration: none;
+    color: #25D366;
+}
+
+.emone{
+    margin-top: 60px;
+    margin-left: 80px;
+    width: 400px;
+    height: 50px;
+    border-radius: 25px 0px 0px 0px;
+    border: 1px solid #a5b1c2;
+    outline: none;
+    padding-left: 30px;
+    box-shadow: 0px 2px 5px gainsboro;
+}
+
+.bmone{
+    height: 52px;
+    width: 170px;
+    border-radius:  0px 0px 25px 0px;
+    outline: none;
+    border: none;
+    margin-left: -100px;
+    color: white;
+    background-color: #25D366;
+    font-weight: bold;
+    font-size: 16px;
+}
+
+.bmone:hover{
+    background-color: #3BB77E;
+    transition: 0.2s ease-in;
+}
+
+.downset{
+    position: absolute;
+    background-color: none;
+    display: flex;
+    margin-top: 1100px;
+    width: 1700px;
+    height: 120px;
+    margin-left: 119px;
+}
+
+.sbox{
+    background-color: #f1f2f6;
+    padding: 40px;
+    margin-left: 30px;
+    border-radius: 10px;
+    width: 217px;
+}
+
+.sbox p{
+    color: #808e9b;
+}
+
+#downbar{
+    position: absolute;
+    width: 1600px;
+    height: 360px;
+    margin-top: 1280px;
+    margin-left: 150px;
+    display: flex;
+    color: #4b4b4b;
+    border-bottom: 0.2px solid #06d675;
+}
+
+.footp a{
+    text-decoration: none;
+    color: #3bb77e;
+}
+
+.favicon{
+    width: 220px;
+    height: 100px;  
+}
+
+.favp{
+    margin-top: 10px; 
+}
+
+#footp{
+    margin-top: 155px;
+    width: 400px;
+    position: absolute;
+}
+
+.footp{
+    margin: 17px 23px;
+    font-weight: bold;
+}
+
+.lsticons{
+    position: absolute;
+    width: 20px;
+    margin-top: 2px;
+}
+#lsticons{
+    margin-top: 17px;
+    color: #3bb77e;
+}
+
+.comp{
+    width: 150px;
+    height: 300px;
+    margin-left: 490px;
+    margin-top: 20px;
+    position: absolute;
+}
+
+.comp ul a{
+    text-decoration: none;
+    list-style: none;
+    color: black;
+}
+
+.comp ul a:hover{
+    color: #06d675;
+    transition: 0.3s ease-in-out;
+    font-weight: bold;
+}
+
+.comp ul a li{
+    margin-top: 20px;
+}
+
+.dside{
+    margin-left: 1290px;
+    margin-top: 20px;
+    position: absolute;
+}
+
+.dsone{
+    margin-top: 20px;
+}
+
+.dstwo{
+    margin-top: 50px;
+}
+
+.gimg{
+    width: 150px;
+    height: 50px;
+    margin-top: 30px;
+}
+
+.gimg:hover{
+    width: 160px;
+    height: 55px;
+}
+
+
+.downfooter{
+    margin-top: 1650px;
+    position: absolute;
+    width: 1600px;
+    height: 80px;
+    margin-left: 150px;
+    color: #4b4b4b;
+}
+
+.wplast{
+    position: absolute;
+    margin-left: 650px;
+    margin-top: -40px;
+}
+
+.wplast h1{
+    color: #3bb77e;
+}
+
+.dltw{
+    margin-left: 1380px;
+    margin-top: -40px;
+}
+
+.dltre{
+    margin-left: 1310px;
+    margin-top: 5px;
+}
+
+.lastic{
+    position: absolute;
+    margin-left: 1470px;
+    margin-top: -42px;
+    width: 100px;
+}
+
+.lastic a{
+    color: #3bb77e;
+    margin-left: 10px;
 }
